tests/compile_time_tests/empty-enum.stderr
error: proc-macro derive panicked
 --> tests/compile_time_tests/empty-enum.rs:3:10
  |
3 | #[derive(TagName)]
  |          ^^^^^^^
  |
  = help: message: cannot derive TagName for empty enum types
