tests/compile_time_tests/empty-enum.rs
use tagname::TagName;

#[derive(TagName)]
enum EmptyEnum {

}

fn main() {
}
